push put and delete fix post
